--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "gulp": "^3.9.1"
   },
   "dependencies": {
+    "bootstrap-sass": "^3.0.0",
     "laravel-elixir": "^4.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "slick-carousel": "^1.6.0"
   }
 }
