initial MVC for continent

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,10 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_HOST=dedi50.your-server.de
+DB_DATABASE=smec2017_db1
+DB_USERNAME=smec2017_1
+DB_PASSWORD=Ntuu3SFKRkc1J4Bq
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
