--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "laravel-elixir": "^4.0.0",
     "bootstrap-sass": "^3.0.0",
     "canvasjs": "^1.8.1",
-    "jquery": "^3.2.1",
+    "jquery": "^3.2.1"
   }
 }
