--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "devDependencies": {
+    "babel-preset-stage-1": "^6.24.1",
     "gulp": "^3.9.1"
   },
   "dependencies": {
