--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "gulp": "^3.9.1"
   },
   "dependencies": {
-    "laravel-elixir": "^4.0.0",
+    "bootstrap-grid": "^2.0.1",
     "bootstrap-sass": "^3.0.0",
     "canvasjs": "^1.8.1",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "laravel-elixir": "^4.0.0"
   }
 }
