--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "bootstrap-grid": "^2.0.1",
     "bootstrap-sass": "^3.0.0",
     "canvasjs": "^1.8.1",
-    "select2-bootstrap-theme": "0.1.0-beta.10",
+    "chart.js": "^2.6.0",
     "jquery": "^3.2.1",
-    "laravel-elixir": "^4.0.0"
+    "laravel-elixir": "^4.0.0",
+    "select2-bootstrap-theme": "0.1.0-beta.10"
   }
 }
