--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "gulp": "^3.9.1"
   },
   "dependencies": {
-    "bootstrap-grid": "^2.0.1",
-    "bootstrap-sass": "^3.0.0",
+    "bootstrap": "^3.3.7",
     "canvasjs": "^1.8.1",
     "chart.js": "^2.6.0",
     "jquery": "^3.2.1",
